--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "before-build": "npm run clean && yarn && npm run type-check",
     "build": "npm run before-build && tsc -p .",
     "dev": "nodemon --exec babel-node --extensions \".ts\" ./src/bin/server.ts",
+    "refresh:env-jwt": "node ./src/scripts/generateEnvJWT.ts",
     "db:migrate:undo": "npx sequelize-cli db:migrate:undo",
     "db:migrate": "npx sequelize-cli db:migrate",
     "db:migrate:fresh": "npx sequelize-cli db:migrate:undo:all && npm run db:migrate",
@@ -29,6 +30,7 @@
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
     "helmet": "^6.0.0",
+    "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
@@ -56,6 +58,7 @@
     "@types/cookie-parser": "^1.4.3",
     "@types/express": "^4.17.14",
     "@types/http-errors": "^2.0.1",
+    "@types/jsonwebtoken": "^9.0.3",
     "@types/lodash": "^4.14.188",
     "@types/multer": "^1.4.7",
     "@types/node": "^18.11.9",
