--- a/.env
+++ b/.env
@@ -6,11 +6,11 @@ JWT_REFRESH_TOKEN_EXPIRED=1d
 PORT=8080
 NODE_ENV=development
 
-DB_CONNECTION=mysql
-DB_HOST=localhost
-DB_PORT=3306
-DB_DATABASE=blog
-DB_USERNAME=root
-DB_PASSWORD=Password123@
+DB_CONNECTION=postgres
+DB_HOST=aws-0-ap-southeast-1.pooler.supabase.com
+DB_PORT=6543
+DB_DATABASE=postgres
+DB_USERNAME=postgres.hfvxyjcnexvpvgikekso
+DB_PASSWORD=wAfr5BLG2Y4bM9FO
 DB_OPERATOR_ALIAS=
 DB_TIMEZONE=+07:00
