--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^2.3.3",
+    "pg": "^8.13.1",
+    "pg-hstore": "^2.3.4",
     "pug": "^3.0.2",
     "sequelize": "^6.25.5",
     "sequelize-cli": "^6.5.2",
