--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "serve:development": "NODE_ENV=development node ./dist/bin/server.js",
     "refresh:env-jwt": "node ./src/scripts/generateEnvJWT.ts",
     "db:migrate:undo": "npx sequelize-cli db:migrate:undo",
+    "db:migrate:undo:all": "npx sequelize-cli db:migrate:undo:all",
     "db:migrate": "npx sequelize-cli db:migrate",
     "db:migrate:fresh": "npx sequelize-cli db:migrate:undo:all && npm run db:migrate",
     "db:seed": "npx sequelize-cli db:seed:all",
